# petit-kernel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dockerfile  mxfp4 moe.md  mxfp4_moe.md  pyproject.toml  setup.py  test.py
cmake/: build_utils.cmake  hunter_config.cmake
dev-support/: Dockerfile.rocm  Dockerfile.rocm_py310  build-python-wheel.sh
include/causalflow/petit/: config.h.in
include/causalflow/petit/tal/: algorithm.h  config.h  int_tuple.h  pointer_base.h
include/causalflow/petit/tal/algorithm/: functional.h  tuple_algorithms.h
include/causalflow/petit/tal/container/: array.h  packed_tuple.h  tuple.h  type_list.h
include/causalflow/petit/tal/detail/: helper_macro.h
include/causalflow/petit/tal/numeric/: integer_sequence.h  integral_constant.h  math.h
include/causalflow/petit/tal/tensor/: layout.h  layout_composed.h  stride.h  tensor.h  tensor_impl.h
include/causalflow/petit/tal/util/: type_traits.h
lib/: CMakeLists.txt
lib/gemm/: CMakeLists.txt  device_types.h
lib/gemm/cpu/: half_float.h
lib/gemm/gpu/quantization/: reduce.cuh
lib/gemm/rocm/: CMakeLists.txt  amd_fastmath.cuh  amd_intrinsics.cuh
lib/gemm/rocm/quantization/: CMakeLists.txt  dequant.cuh  gemm.h  kernel_config.cuh  memory_ops.cuh  mxfp4_dequant.cuh  mxfp4_types.h  qgemm.cuh  types.h
lib/gemm/rocm/quantization/fp4/: CMakeLists.txt  README.md  algo_chooser.cc  algo_variants.h  gemm_fp4.h  gemm_fp4_fp16_grid.cc  gemm_fp4_fp16_grid.cu  gemm_fp4_fp16_grid.cuh  gemm_fp4_fp16_rocm_test.cc  gemm_moe_fp4.h  gemm_moe_fp4_fp16_grid.cc  gemm_moe_fp4_fp16_rocm_test.cc  gen_solution_list.cc  quantization_utils.cu  quantization_utils_fp4_test.cc  solution_impl.h  solution_map.cc  warp_schedule_fp16.cuh
lib/gemm/rocm/quantization/moe/: CMakeLists.txt  moe_benchmark.cc  moe_benchmark.h  moe_benchmark_interface.h  moe_gemm_fp4.h  moe_gemm_fp4_grid.cc  moe_gemm_fp4_test.cc  moe_test_utils.cc  moe_test_utils.h  mxfp4_dequant.cuh  mxfp4_types.h
lib/hal/: CMakeLists.txt  device.h  fp16.h  platform.cc
lib/hal/rocm/: CMakeLists.txt  platform_rocm.cc
lib/pybind/: CMakeLists.txt  fp4.cc  pybind.cc  pybind.h
lib/tests/: CMakeLists.txt  debug_utils.h  quantization.cc  quantization.h
lib/utils/: assert.h  hip_helper.h  monad_runner.h  static_dispatch.h  test_utils.h
petit_kernel/: __init__.py
tools/benchmarks/: matmul.py
tools/benchmarks/matmul/: CMakeLists.txt  main.cc  matmul.cc  matmul.h
tools/benchmarks/matmul/rocm/: CMakeLists.txt  matmul_hipblaslt.cc  matmul_moe_stage2.cc  matmul_petit.cc  matmul_rocblas.cc
