[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch>=2.5.1",
    "cmake>=3.22",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "petit_kernel"
version = "0.0.2"
readme = "README.md"
description = "Optimized FP4 GPU kernels for AMD GPUs"
authors = [
    {name = "Haohui Mai", email = "haohui@causalflow.ai"}
]
maintainers = [
    {name = "Haohui Mai", email = "haohui@causalflow.ai"}
]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/causalflow-ai/petit-kernel"

[tool.setuptools]
packages = ["petit_kernel"]
package-dir = {"" = "."}
